# esphome-deployment

./: .gitignore  plug-aquarium-co2.yaml  plug-sternenlampe.yaml  pyproject.toml  umweltsensor-arbeitszimmer.yaml  umweltsensor-schlafzimmer.yaml  umweltsensor-wohnzimmer.yaml
devices/: delock-11826.yaml  umweltsensor-bme680.yaml  umweltsensor.yaml
includes/: api.yaml  base.yaml  common.yaml  webserver.yaml  wifi.yaml
